--- a/about-one.html
+++ b/about-one.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WINK - Music Artist Portfolio Web Template</title>
+    <title>About Sociova</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
    <!--favicon-img--> 
-   <link rel="icon" type="image/png" href="images/favicon.jpg">
+   <link rel="icon" type="image/png" href="images/Sociova Logo No BG.png">
    <!--favicon-img-->
 
     <link rel="stylesheet" href="css/index.css">
@@ -29,10 +29,7 @@
 
 
         <div id="preloader">
-            <div class="p">
-                <img src="images/headphone.png" alt="headphone">
-            </div>
-            <div class="p">Use Headphone For Better Experience.</div>
+            <div class="p">All about our incredible agency.</div>
         </div>
 
         <div id="about-one-content">
@@ -40,7 +37,7 @@
             <!-- NAVIGATION -->
             <div class="navigation">
                 <div class="logo hover ">
-                   <a href="index-two.html" class="text">ARLO BROWN</a>
+                  <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;">
                 </div>
                 <div class="menu-bar hover ">
                     <div class="menu-bar-name text">
@@ -98,15 +95,6 @@
    <span class="text-scroll"> Arlo Brown.</span> 
 </div>
 
-
-
-             
- <!-- HEADPHONE IMG -->
- <div class="headphone img text">
-  <img src="images/headphone.png" title="headphone zone" class="text" alt="headphone">
-</div>
- <!-- HEADPHONE IMG -->
-
  
         </div>
     </div>
@@ -117,13 +105,12 @@
 
     <div class="navigation-content">
       <div class="navigation-logo hover opacity">
-        <a href="#" class="text">ARLO BROWN</a>
+          <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -25px; margin-left: 60px;">
        </div>
       <ul class="navigation-ul">
           <li><a href="index.html" data-text="Home" data-img="images/bg-image-three.jpg">Home</a></li>
           <li><a href="about-one.html"  data-text="About"  data-img="images/about-img.jpg">About</a></li>
-          <li><a href="songs-one.html" data-text="Songs"  data-img="images/album-thumbnail-nine.jpg">Songs</a></li>
-          <li><a href="blog-one.html"  data-text="Blogs" data-img="images/main-bg-three.jpg">Blogs</a></li>
+          <li><a href="work-one.html"  data-text="Blogs" data-img="images/main-bg-three.jpg">Work</a></li>
           <li><a href="contact-one.html"  data-text="Contact" data-img="images/album-thumbnail-four.jpg">Contact</a></li>
       </ul>
       <div class="navigation-close hover about-close opacity">
@@ -135,9 +122,11 @@
   
           
    <!-- HEADPHONE IMG -->
+   <!--
    <div class="headphone-navigation opacity">
       <img src="images/headphone.png" title="headphone zone" class="text" alt="headphone">
     </div>
+    -->
      <!-- HEADPHONE IMG -->
   
   
