--- a/contact-one.html
+++ b/contact-one.html
@@ -26,7 +26,7 @@
 
         <!-- PRELOADER -->
         <div id="preloader">
-            <div class="p">Have an idea?</div>
+            <div class="p">Ready to boost your business?</div>
             <div class="p">Get in touch and collaborate with us!</div>
         </div>
         <!-- PRELOADER -->
@@ -74,7 +74,7 @@
 
     <div id="form" class="opacity-contact">
 
-            <form  id ="myForm" action="#">
+            <form  id ="myForm" action="https://formsubmit.co/jakubhrbek117@gmail.com" method="POST">
               <div class="input-line">
                 <input id="name" type="text" placeholder="NAME" class="input-same-line" required>
                 <input id="email" type="email" placeholder="EMAIL" class="input-same-line" required>
@@ -102,7 +102,7 @@
         <span id="rotated">  FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; </span>
     </div>
     <div class="mail">
-        <a href="mailto:INFO@GMAIL.COM">INFO@GMAIL.COM</a>
+        <a href="mailto:jakubhrbek117@GMAIL.COM">JAKUBHRBEK117@GMAIL.COM</a>
     </div>
 </div>
 
@@ -144,7 +144,7 @@
         <div class="navigation-logo hover opacity">
             <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -25px; margin-left: 60px;">
          </div>
-        <ul class="navigation-ul">
+         <ul class="navigation-ul">
             <li><a href="index.html" data-text="Home" data-img="images/bg-image-three.jpg">Home</a></li>
             <li><a href="about-one.html"  data-text="About"  data-img="images/about-img.jpg">About</a></li>
             <li><a href="work-one.html"  data-text="Blogs" data-img="images/main-bg-three.jpg">Work</a></li>
