--- a/pricing-one.html
+++ b/pricing-one.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sociova | Work</title>
+        <title>Sociova | Pricing</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     
     </head>
 <body>
-    <main id="songs-one">
+    <main id="songs-one" class="songs-two-background">
 
 
         
@@ -26,7 +26,7 @@
 
 
         <div id="preloader">
-            <div class="p">See the results of our work.</div>
+            <div class="p">Get ready to have your business pushed to new heights.</div>
         </div>
 
 <!-- CONTENT -->
@@ -59,7 +59,7 @@
 <!-- HEADING -->
 <div class="heading">
     <div class="text">
-      Work
+      Pricing
     </div>
 </div>
 
