--- a/about-one.html
+++ b/about-one.html
@@ -67,7 +67,7 @@
           
 <div class="heading">
     <span class="text">
-      ABOUT
+      About Sociova
     </span> 
  </div>    
 
@@ -75,7 +75,7 @@
 <div class="center">
   <!-- ABOUT IMG -->
   <div class="about-img img">
-    <img class="img-parallax" src="images/about-img.jpg" alt="about-img">
+    <img class="img-parallax" src="https://images.unsplash.com/flagged/photo-1559717865-a99cac1c95d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1771&q=80" alt="about-img">
   </div>
   <!-- ABOUT IMG -->
 </div>
@@ -133,9 +133,9 @@
       <!-- SOCIAL MEDIA LINKS -->
       <div class="social-media-links-navigation">
           <ul>
-              <li ><a href="#"  class="text hover opacity">YT</a></li>
+              <li ><a href="https://www.youtube.com/@TheUnleashingPotential" target="blank_" class="text hover opacity">YT</a></li>
               <li ><a href="#"  class="text hover opacity">FB</a></li>
-              <li ><a href="#"  class="text hover opacity">IG</a></li>
+              <li ><a href="https://www.instagram.com/theunleashingpotential/"  target="blank_" class="text hover opacity">IG</a></li>
           </ul>
       </div>
         <!-- SOCIAL MEDIA LINKS -->
