--- a/contact-one.html
+++ b/contact-one.html
@@ -37,7 +37,7 @@
   <!-- NAVIGATION -->
   <div class="navigation">
     <div class="logo hover ">
-        <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;">
+        <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;"></a>
     </div>
     <div class="menu-bar hover ">
         <div class="menu-bar-name text">
@@ -67,7 +67,7 @@
 
 <div id="flex-row">
 
-<!-- CONTACT FORM -->
+<!-- CONTACT FORM
 
 <div id="contact-form">
 
@@ -90,6 +90,8 @@
     </div>
 </div>
 
+ -->
+
 <!-- CONTACT FORM -->
 
 
@@ -99,7 +101,7 @@
 <div id="collaboration-mail" class="opacity-contact">
 
     <div class="circular-text">
-        <span id="rotated">  FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; FOR COLLABORATION * &nbsp;&nbsp;&nbsp;&nbsp; </span>
+        <span id="rotated">  CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; </span>
     </div>
     <div class="mail">
         <a href="mailto:jakubhrbek117@GMAIL.COM">JAKUBHRBEK117@GMAIL.COM</a>
@@ -126,11 +128,11 @@
   
 
 
-<!-- progress-bar -->
+<!-- progress-bar
 <div class="progress-bar-container fade-in">
     <div class="progressbar"></div>
 </div>
-<!-- progress-bar -->
+ progress-bar -->
 
 
 
@@ -145,10 +147,10 @@
             <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -25px; margin-left: 60px;">
          </div>
          <ul class="navigation-ul">
-            <li><a href="index.html" data-text="Home" data-img="images/bg-image-three.jpg">Home</a></li>
-            <li><a href="about-one.html"  data-text="About"  data-img="images/about-img.jpg">About</a></li>
-            <li><a href="work-one.html"  data-text="Blogs" data-img="images/main-bg-three.jpg">Work</a></li>
-            <li><a href="contact-one.html"  data-text="Contact" data-img="images/album-thumbnail-four.jpg">Contact</a></li>
+            <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
+            <li><a href="about-one.html"  data-text="About"  data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831540550025226/Screenshot_2023-07-15_at_19.47.07.png">About</a></li>
+            <li><a href="work-one.html" data-text="Work" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
+            <li><a href="contact-one.html"  data-text="Contact" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831680438439976/Screenshot_2023-07-15_at_19.47.40.png">Contact</a></li>
         </ul>
         <div class="navigation-close hover about-close opacity">
             <div class="navigation-close-line"></div>
@@ -170,9 +172,9 @@
         <!-- SOCIAL MEDIA LINKS -->
         <div class="social-media-links-navigation">
             <ul>
-                <li ><a href="#"  class="text hover opacity">YT</a></li>
+                <li ><a href="https://www.youtube.com/@TheUnleashingPotential" target="blank_" class="text hover opacity">YT</a></li>
                 <li ><a href="#"  class="text hover opacity">FB</a></li>
-                <li ><a href="#"  class="text hover opacity">IG</a></li>
+                <li ><a href="https://www.instagram.com/theunleashingpotential/"  target="blank_" class="text hover opacity">IG</a></li>
             </ul>
         </div>
           <!-- SOCIAL MEDIA LINKS -->
