--- a/work-one.html
+++ b/work-one.html
@@ -47,6 +47,7 @@
             .glassmorphic-button {
                 width: 90%;
                 max-width: 300px;
+                left: 10vw;
             }
         }
 
@@ -81,7 +82,7 @@
    <!-- NAVIGATION -->
    <div class="navigation">
     <div class="logo hover ">
-        <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;">
+        <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;"></a>
     </div>
     <div class="menu-bar hover ">
         <div class="menu-bar-name text">
@@ -275,7 +276,7 @@
          <ul class="navigation-ul">
             <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
             <li><a href="about-one.html"  data-text="About"  data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831540550025226/Screenshot_2023-07-15_at_19.47.07.png">About</a></li>
-            <li><a href="work-one.html" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
+            <li><a href="work-one.html" data-text="Work" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
             <li><a href="contact-one.html"  data-text="Contact" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831680438439976/Screenshot_2023-07-15_at_19.47.40.png">Contact</a></li>
         </ul>
         <div class="navigation-close hover about-close opacity">
@@ -298,9 +299,9 @@
         <!-- SOCIAL MEDIA LINKS -->
         <div class="social-media-links-navigation">
             <ul>
-                <li ><a href="#"  class="text hover opacity">YT</a></li>
+                <li ><a href="https://www.youtube.com/@TheUnleashingPotential" target="blank_" class="text hover opacity">YT</a></li>
                 <li ><a href="#"  class="text hover opacity">FB</a></li>
-                <li ><a href="#"  class="text hover opacity">IG</a></li>
+                <li ><a href="https://www.instagram.com/theunleashingpotential/"  target="blank_" class="text hover opacity">IG</a></li>
             </ul>
         </div>
           <!-- SOCIAL MEDIA LINKS -->
@@ -323,7 +324,7 @@
     <script src="js/pace.js"></script>
     <script src="js/index.js"></script>
     <div class="glassmorphic-button" id="glassmorphicButton">
-        <a href="calculator.html">Interested? Go to our calculator!</a>
+        <a href="calculator.html">Interested? Visit our calculator!</a>
     </div>
 
     <script>
