--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             font-family: "Josefin sans";
             text-align: center;
         }
+        @media screen and (max-width: 768px) {
+            #new-text {
+                font-size: 30px;
+                width: 70vw;
+            }
+        }
 
         </style>
     </head>
@@ -111,7 +117,7 @@
         </a>
         -->
     <div class="all-songs">
-        <a href="work-one.html" title="All Songs"><i class="gg-arrow-right"></i></a>
+        <a href="contact-one.html" title="All Songs"><i class="gg-arrow-right"></i></a>
     </div>
     </div>
 </div>
@@ -137,7 +143,7 @@
         <ul class="navigation-ul">
             <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
             <li><a href="about-one.html"  data-text="About"  data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831540550025226/Screenshot_2023-07-15_at_19.47.07.png">About</a></li>
-            <li><a href="work-one.html" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
+            <li><a href="work-one.html" data-text="Work" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
             <li><a href="contact-one.html"  data-text="Contact" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831680438439976/Screenshot_2023-07-15_at_19.47.40.png">Contact</a></li>
         </ul>
         <div class="navigation-close hover about-close opacity">
