--- a/pricing-one.html
+++ b/pricing-one.html
@@ -247,7 +247,7 @@
          <ul class="navigation-ul">
             <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
             <li><a href="about-one.html"  data-text="About"  data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831540550025226/Screenshot_2023-07-15_at_19.47.07.png">About</a></li>
-            <li><a href="work-one.html" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
+            <li><a href="work-one.html" data-text="Work" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
             <li><a href="contact-one.html"  data-text="Contact" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831680438439976/Screenshot_2023-07-15_at_19.47.40.png">Contact</a></li>
         </ul>
         <div class="navigation-close hover about-close opacity">
@@ -270,9 +270,9 @@
         <!-- SOCIAL MEDIA LINKS -->
         <div class="social-media-links-navigation">
             <ul>
-                <li ><a href="#"  class="text hover opacity">YT</a></li>
+                <li ><a href="https://www.youtube.com/@TheUnleashingPotential" target="blank_" class="text hover opacity">YT</a></li>
                 <li ><a href="#"  class="text hover opacity">FB</a></li>
-                <li ><a href="#"  class="text hover opacity">IG</a></li>
+                <li ><a href="https://www.instagram.com/theunleashingpotential/"  target="blank_" class="text hover opacity">IG</a></li>
             </ul>
         </div>
           <!-- SOCIAL MEDIA LINKS -->
