--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </a>
         -->
     <div class="all-songs">
-        <a href="contact-one.html" title="All Songs"><i class="gg-arrow-right"></i></a>
+        <a href="contact-one.html" title="Learn More"><i class="gg-arrow-right"></i></a>
     </div>
     </div>
 </div>
