--- a/work-one.html
+++ b/work-one.html
@@ -236,7 +236,7 @@
     <div class="song-details">
         <div class="song-details-content">
         <div class="song-name">Website Design & Development</div>
-        <div class="artist-name">Improving your digital experiences with our design and development.</div>
+        <div class="artist-name">Get a website that will drive up sales.</div>
         </div>
         
     </div>
