--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <img src="images/macbook.png" alt="new-release">
 <div class="song-details">
     <div class="song-name">Ready to boost your business?</div>
-    <div class="singer-name">You can contact us immediately and at any time!</div>
+    <div class="singer-name">You can contact us at any time!</div>
     <div class="music-player">
         <!--
         <a href="https://example.com/your-new-page" target="_blank">
