--- a/work-one.html
+++ b/work-one.html
@@ -20,7 +20,7 @@
         /* CSS for the glassmorphic button */
 
         .glassmorphic-button {
-            position: fixed;
+            position: fixed; /*either use position absolute or make it on the bottom of the page, when using absolute, button appears in between the rows of cards*/
             bottom: 30px;
             left: 35vw;
             right: 35vw;
