Logo positioning changes

--- a/work-one.html
+++ b/work-one.html
@@ -49,6 +49,20 @@
                 max-width: 300px;
                 left: 10vw;
             }
+
+            #new-text {
+                font-size: 30px;
+                width: 70vw;
+            }
+
+            .logo {
+                margin-left: -25px;
+                margin-top: -10px;
+            }
+
+            .navigation-logo {
+                margin-left: -70px;
+            }
         }
 
         .glassmorphic-button.show {
