--- a/index.html
+++ b/index.html
@@ -30,10 +30,20 @@
             font-family: "Josefin sans";
             text-align: center;
         }
+
         @media screen and (max-width: 768px) {
             #new-text {
                 font-size: 30px;
                 width: 70vw;
+            }
+
+            .logo {
+                margin-left: -25px;
+                margin-top: -10px;
+            }
+
+            .navigation-logo {
+                margin-left: -70px;
             }
         }
 
