Responsiveness, bug fixing, content

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             #new-text {
                 font-size: 30px;
                 width: 70vw;
+                bottom: 1px;
             }
 
             .logo {
