--- a/about-one.html
+++ b/about-one.html
@@ -15,7 +15,19 @@
     <link rel="stylesheet" href="css/index.css">
 
     <style>
-
+        .background-wrapper {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1; /* Set the z-index to a negative value to place it behind other content */
+            background-image: url('https://images.unsplash.com/flagged/photo-1559717865-a99cac1c95d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1771&q=80');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center; /* Center the background image horizontally and vertically */
+            filter: blur(50px) brightness(80%);; /* Apply a blur effect to the background image */
+        }
         @media screen and (max-width: 768px) {
             #new-text {
                 font-size: 30px;
@@ -37,6 +49,7 @@
 
 </head>
 <body>
+  <div class="background-wrapper"></div>
     <!-- MAIN CONTENT -->
   
     <main id="about-one">
@@ -102,7 +115,7 @@
 <div class="center">
   <div class="about-text">
     <div class="about-text-heading  text-scroll">
-     Hi there, I’m glad you found me. My name is <span class="red"> Arlo Brown</span> and I like to make music.
+     We are an all-in-one business scaling agency focused on results. No matter where you are, we will get you further than you ever thought possible and faster than you could imagine.
     </div>
     <div class="about-text-content  text-scroll">
       On this page you can find out what I have been up to lately and maybe even a little bit about where I will go in the future. For me, the greatest thing about being a musician is being in the position to inspire other people. I take such pleasure in hearing that people have been motivated to create after hearing my music, whether it be a painting, a poem, their own music or something completely different. Music is not a one way street, it is a conversation where the listener's role is as important as the artist's. Well, here you can find my side of it all.
@@ -112,7 +125,7 @@
 </div>
 
 <div class="signature">
-   <span class="text-scroll"> Arlo Brown.</span> 
+   <span class="text-scroll">Hakan, CEO ㅤ</span> 
 </div>
 
  
