--- a/work-one.html
+++ b/work-one.html
@@ -27,13 +27,18 @@
             transform: translateX(-50%);
             border-radius: 50px;
             padding: 12px 30px;
-            background-color: rgba(255, 255, 255, 0.15);
+            background-color: rgba(255, 255, 255, 0.35);
             backdrop-filter: blur(10px);
             box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
             font-family: "Josefin sans";
             opacity: 0;
             transition: opacity 1s ease-in-out;
             text-align: center;
+        }
+
+        .emptySpace {
+            height: 20vh;
+            width: 100%;
         }
 
         .glassmorphic-button a {
@@ -73,7 +78,9 @@
             transform: translateY(20px);
             pointer-events: none;
         }
-
+        .p {
+            text-align: center;
+        }
     </style>
 <body>
     <main id="songs-one" style="background-image: url(./images/blurredDubai.png);">
@@ -256,6 +263,7 @@
     </div>
     
 </div>
+<div class="emptySpace"></div>
 </div>
 </div>
 
