--- a/about-one.html
+++ b/about-one.html
@@ -118,7 +118,7 @@
      We are an all-in-one business scaling agency focused on results. No matter where you are, we will get you further than you ever thought possible and faster than you could imagine.
     </div>
     <div class="about-text-content  text-scroll">
-      On this page you can find out what I have been up to lately and maybe even a little bit about where I will go in the future. For me, the greatest thing about being a musician is being in the position to inspire other people. I take such pleasure in hearing that people have been motivated to create after hearing my music, whether it be a painting, a poem, their own music or something completely different. Music is not a one way street, it is a conversation where the listener's role is as important as the artist's. Well, here you can find my side of it all.
+      At Sociova, we are driven by a singular mission: to help your business thrive and soar to new heights. We understand that your success is our success, and that's why we are passionately committed to delivering exceptional marketing solutions tailored to your unique needs. <br> <br> In today's fast-paced and competitive world, having a strong and strategic marketing presence is vital for any business to flourish. We firmly believe that every organization deserves the opportunity to harness the power of cutting-edge marketing strategies to boost growth and leave a lasting impact on their target audience.
     </div>
     
    </div>
@@ -163,7 +163,7 @@
      <!-- HEADPHONE IMG -->
   
   
-      <!-- SOCIAL MEDIA LINKS -->
+      <!-- SOCIAL MEDIA LINKS
       <div class="social-media-links-navigation">
           <ul>
               <li ><a href="https://www.youtube.com/@TheUnleashingPotential" target="blank_" class="text hover opacity">YT</a></li>
@@ -171,7 +171,7 @@
               <li ><a href="https://www.instagram.com/theunleashingpotential/"  target="blank_" class="text hover opacity">IG</a></li>
           </ul>
       </div>
-        <!-- SOCIAL MEDIA LINKS -->
+        SOCIAL MEDIA LINKS -->
   
   </div>
   
