--- a/contact-one.html
+++ b/contact-one.html
@@ -124,7 +124,7 @@
         <span id="rotated">  CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; </span>
     </div>
     <div class="mail">
-        <a href="mailto:contact@SOCIOVA.NET">contact@SOCIOVA.NET</a>
+        <a href="mailto:contact@SOCIOVA.NET">CONTACT@SOCIOVA.NET</a>
     </div>
 </div>
 
