Updated Work page
- Completely reworked work page
- Added better copy
- Better functionality
- Better responsiveness
- Better design

--- a/about-one.html
+++ b/about-one.html
@@ -118,7 +118,8 @@
      We are an all-in-one business scaling agency focused on results. No matter where you are, we will get you further than you ever thought possible and faster than you could imagine.
     </div>
     <div class="about-text-content  text-scroll">
-      At Sociova, we are driven by a singular mission: to help your business thrive and soar to new heights. We understand that your success is our success, and that's why we are passionately committed to delivering exceptional marketing solutions tailored to your unique needs. <br> <br> In today's fast-paced and competitive world, having a strong and strategic marketing presence is vital for any business to flourish. We firmly believe that every organization deserves the opportunity to harness the power of cutting-edge marketing strategies to boost growth and leave a lasting impact on their target audience.
+      Sociova is here to help your business stand out in the digital era. Our mission is clear: to use our expertise to give your brand a strong presence in the online world. <br> <br>We pride ourselves as an all-in-one scaling agency. Our team of experienced professionals will assist your company with everything from content creation, to high-ticket closing as well as funnel optimization by using frameworks customized for your niche. <br> <br> As the digital economy evolves rapidly, new opportunities come and go. Taking action at the right time is crucial for a business to stay competitive - this is where we step in. <br> <br> Whether you’re a one-person business or a company looking to expand, Sociova will take your brand to the next level. Are you ready to take the next step?
+
     </div>
     
    </div>
@@ -143,7 +144,7 @@
        <ul class="navigation-ul">
           <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
           <li><a href="about-one.html"  data-text="About"  data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831540550025226/Screenshot_2023-07-15_at_19.47.07.png">About</a></li>
-          <li><a href="work-one.html" data-text="Work" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
+          <li><a href="work.html" data-text="Work" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
           <li><a href="contact-one.html"  data-text="Contact" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831680438439976/Screenshot_2023-07-15_at_19.47.40.png">Contact</a></li>
       </ul>
       <div class="navigation-close hover about-close opacity">
