Linking logos to home page

--- a/about-one.html
+++ b/about-one.html
@@ -70,7 +70,7 @@
             <!-- NAVIGATION -->
             <div class="navigation">
                 <div class="logo hover ">
-                  <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;">
+                  <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;"></a>
                 </div>
                 <div class="menu-bar hover ">
                     <div class="menu-bar-name text">
@@ -139,7 +139,7 @@
 
     <div class="navigation-content">
       <div class="navigation-logo hover opacity">
-          <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -25px; margin-left: 60px;">
+          <a href="index.html"> <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -25px; margin-left: 60px;"> </a>
        </div>
        <ul class="navigation-ul">
           <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
