--- a/funnel-creation.html
+++ b/funnel-creation.html
@@ -64,7 +64,7 @@
     <!-- NAVIGATION -->
     <div class="navigation">
       <div class="logo hover ">
-        <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -80px; margin-left: -35px;"></a>
+        <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px; margin-left: 10px;"></a>
       </div>
       <div class="menu-bar hover ">
           <div class="menu-bar-name text">
@@ -126,7 +126,7 @@
     <!-- PARAGRAPH -->
 
     <div class="button-container">
-      <a href="contact-one.html"><button class="glow-button">Let's scale my business!</button></a>
+      <a href="contact-one.html"><button class="glow-button">Let us scale your business!</button></a>
     </div>
       <!-- PARAGRAPH -->
 
