--- a/work.html
+++ b/work.html
@@ -224,7 +224,7 @@
 
     <div class="navigation-content">
         <div class="navigation-logo hover opacity">
-            <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;"></a>
+            <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px; margin-left: -15px;"></a>
          </div>
          <ul class="navigation-ul">
             <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
