Update - summary later

--- a/web-design-development.html
+++ b/web-design-development.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Content Creation | Sociova</title>
+    <title>Website Design and Development | Sociova</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">Uploading content to 10x your customers.</div>
+              <div class="p">Start earning income from your optimised funnel.</div>
           </div>
           <!-- PRELOADER -->
   
@@ -83,7 +83,7 @@
   <!-- HEADING -->
   <div class="heading">
       <div class="text">
-        CONTENT CREATION
+        WEBSITE DESIGN AND DEVELOPMENT
       </div>
   </div>
   
@@ -110,7 +110,7 @@
 
   <!-- BLOG HEADING -->
   <div class="blog-heading text-scroll">
-    Uploading content to 10x your customers.
+    Start earning income from your optimised funnel.
   </div>
 
   <!-- BLOG HEADING -->
@@ -118,10 +118,13 @@
 
     <!-- PARAGRAPH -->
     <div class="para text-scroll">
-      Have you tried posting content to social media, but don’t seem to receive any engagement or views? Do you wonder why top players like Alex Hormozi, Tony Robbins, and Grant Cardone get so many followers, views and engagement? 
+      Have you been experiencing inactivity from specifically your funnels? Do you want to build rapport between you and your customers? Do you want something that is cost-effective, but could be used 24/7 for a worldwide audience?
     </div>
     <div class="para text-scroll">
-      The single solution is to use the skills of professional video, effect, and photo editors to really take your business to that next level. At Sociova, we also use up-to-date AI technology to really enhance the quality and quantity of your videos.
+      Then, design a website or have someone like one of our experts do it for you to fit your specific needs. Imagine, when someone types in a niche/product/program and the first thing that comes to their search engine is your website.
+    </div>
+    <div class="para text-scroll">
+      No need to imagine it any longer because we can do it for you.
     </div>
     <!-- PARAGRAPH -->
 
