New and improved content
- Improved content creation part
- New web development file

--- a/web-design-development.html
+++ b/web-design-development.html
@@ -131,7 +131,7 @@
     <br><br>
     <!-- PARAGRAPH -->
     <div class="blog-heading text-scroll">
-      Don’t believe us? See it for yourself 👇
+      Here's some of our work 👇
     </div>
     
       <!-- PARAGRAPH -->
@@ -146,6 +146,10 @@
         <div class="img-scroll">
             <img src="images/album-thumbnail-five.jpg" alt="img" >
         </div>
+    </div>
+
+    <div class="button-container">
+      <a href="contact-one.html"><button class="glow-button">Ok, I'm interested!</button></a>
     </div>
 
 
@@ -168,7 +172,7 @@
        SHARE LINKS -->
 
        <div class="signature">
-        <span class="text-scroll">Krisztian, Content Creation Leadㅤ</span> 
+        <span class="text-scroll">Jakub, Web Development Leadㅤ</span> 
      </div>
 
 </div>
